# ReelPilot

./: .env.example  .gitignore  README.md  pyproject.toml  test_scrape.py  test_scrape_2.py
assets/: cache.db
scripts/: fetch_hooks.py
src/reelpilot/: assembly.py  audio.py  broll.py  captions.py  cli.py  config.py  effects.py  hooks.py  models.py  music.py  script.py  stt.py  tts.py  vision.py  web.py
src/reelpilot/templates/: index.html
src/shortmaker/: __init__.py  assembly.py  broll.py  cache.py  captions.py  cli.py  config.py  effects.py  hooks.py  http.py  matcher.py  models.py  music.py  script.py  stt.py  tts.py  vision.py  web.py
src/shortmaker/templates/: index.html
tests/: test_assembly.py  test_broll_music.py  test_captions.py  test_matcher.py  test_script.py  test_tts.py
