[project]
name = "shortmaker"
version = "0.1.0"
description = "Automated short video generator: topic + hook -> 9:16 MP4"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "faster-whisper>=1.0",
    "openai>=1.40",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
shortmaker = "shortmaker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shortmaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"